--- a/front/package.json
+++ b/front/package.json
@@ -38,7 +38,8 @@
     "react-native-svg": "^15.13.0",
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1"
+    "react-native-worklets": "0.5.1",
+    "@react-native-community/datetimepicker": "8.4.4"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
